# arc-interactive

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  GAMES.md  LICENSE  README.md  create_sy01_gif.py  pyproject.toml  run_game.py  update_readme_stats.py
.claude/: CLAUDE.md
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
benchmarks/: README.md  __init__.py  arc_game_wrapper.py  run_task_test.py
devtools/: SIMILARITY_TRIAGE.md  check_registry.py  migrate_all_v1_to_sha.py  registry_gif_batch_status.csv  registry_gif_dispatch.csv  registry_gif_skill_gate_pilots.txt  similar_games_report.py  smoke_games.py  smoke_registry_games.py  solvability_common.py  solvability_inventory.py  verify_level_solvability.py
scripts/: demo_sv01.py  env_resolve.py  export_environment_files_zip.py  gif_common.py  gif_inventory.py  human_play_pygame.py  registry_cs_pd_gif.py  registry_ex_gp_lo_gif.py  registry_gif_lib.py  registry_gif_overrides.json  registry_gif_recorders.py  registry_lw_rp_ml_sf_gif.py  registry_mechanic_gif.py  registry_mm_fe_gif.py  registry_mo_zq_hm_gif.py  registry_ng01_gif.py  registry_ph_bn_bi_gif.py  registry_pk_ec_gif.py  registry_rk_jw_gif.py  registry_tk_sr_gif.py  registry_tw_rv_gif.py  render_arc_game_gif.py  render_ff01_gif.py  render_ll01_gif.py  render_ml01_gif.py  render_ml02_gif.py  render_ml03_gif.py  render_ml04_gif.py  render_mm01_gif.py  render_ms01_gif.py  render_pending_gifs.py  render_pt01_gif.py  render_registry_gifs.py  render_rs01_gif.py  render_sk01_gif.py  render_sq01_gif.py  render_sv01_gif.py  (+5 more)
(+600 files in other folders)
