[project]
name = "arc-games"
version = "0.1.0"
description = "ARC-AGI-3 games collection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arc-agi",
    "arcengine",
    "numpy>=2.4.3",
]

[tool.uv.sources]
arc-agi = { git = "https://github.com/arcprize/arc-agi.git" }
arcengine = { git = "https://github.com/arcprize/ARCEngine.git" }
